# packages/api/openapi.json
@@ -1537,6 +1537,9 @@
           "temperature": {
             "type": "number"
           },
+          "maxTokens": {
+            "type": "number"
+          },
           "isRoutable": {
             "type": "boolean"
           },
@@ -1692,6 +1695,7 @@
           "systemPrompt",
           "model",
           "temperature",
+          "maxTokens",
           "isRoutable",
           "isDefault",
           "builtinTools",
@@ -1722,6 +1726,12 @@
           },
           "temperature": {
             "type": "number"
+          },
+          "maxTokens": {
+            "type": "integer",
+            "minimum": 0,
+            "exclusiveMinimum": true,
+            "maximum": 9007199254740991
           },
           "isRoutable": {
             "type": "boolean"
@@ -2286,6 +2296,12 @@
               "temperature": {
                 "type": "number"
               },
+              "maxTokens": {
+                "type": "integer",
+                "minimum": 0,
+                "exclusiveMinimum": true,
+                "maximum": 9007199254740991
+              },
               "isRoutable": {
                 "type": "boolean"
               },
@@ -2487,6 +2503,9 @@
               "temperature": {
                 "type": "number"
               },
+              "maxTokens": {
+                "type": "number"
+              },
               "isRoutable": {
                 "type": "boolean"
               },
@@ -2642,6 +2661,7 @@
               "systemPrompt",
               "model",
               "temperature",
+              "maxTokens",
               "isRoutable",
               "isDefault",
               "builtinTools",
@@ -2685,6 +2705,9 @@
                   "type": "string"
                 },
                 "temperature": {
+                  "type": "number"
+                },
+                "maxTokens": {
                   "type": "number"
                 },
                 "isRoutable": {
@@ -2842,6 +2865,7 @@
                 "systemPrompt",
                 "model",
                 "temperature",
+                "maxTokens",
                 "isRoutable",
                 "isDefault",
                 "builtinTools",
